# edamame_helper

./: .env  .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  build.rs  localsign.sh
.cargo/: config.toml
.cursor/rules/: project.mdc
.github/workflows/: check_version.yml  deploy_macos.yml  deploy_windows.yml  format.yml  release_deploy_macos.yml  release_deploy_windows.yml  release_macos.yml  release_windows.yml  rust_format.yml  test_installers.yml  test_macos.yml  test_windows.yml
chocolatey/: edamame-helper.nuspec
chocolatey/tools/: chocolateyInstall.ps1
chromeos/: background.js  manifest.json  popup.html  popup.js
edamame_helper.xcodeproj/: project.pbxproj
edamame_helper.xcodeproj/project.xcworkspace/xcuserdata/flyonnet.xcuserdatad/: UserInterfaceState.xcuserstate
linux/edamame_helper_linux/: .gitignore  Cargo.toml  LICENSE
linux/edamame_helper_linux/debian/: service
linux/edamame_helper_linux/src/: main.rs
macos/: com.edamametechnologies.edamame-helper.plist  conclusion.html  distribution.xml  edamame-helper.rb  keychain.sh  make-distribution-pkg.sh  make-pkg.sh  notarization.sh  postinstall  preinstall  publish.sh  uninstall.sh  verify-installed-helper.sh  welcome.html
macos/edamame_helper_xcode/edamame_helper_xcode/: main.swift
macos/edamame_helper_xcode/edamame_helper_xcode.xcodeproj/: project.pbxproj
macos/edamame_helper_xcode/edamame_helper_xcode.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
src/: lib.rs  main.rs  main_windows.rs  server.rs  windows.rs
tests/: es_entitlement_test.rs
windows/edamame_helper_windows/: Cargo.toml
windows/edamame_helper_windows/src/: main.rs
windows/edamame_helper_windows/wix/: main.wxs
wix/: main.wxs
