[package]
name = "edamame_helper"
version = "0.9.83"
edition = "2021"
authors = ["EDAMAME Technologies"]
description = "This system helper is required for advanced Security Score analysis and remediations within the EDAMAME Security application."

[profile.release]
debug = true

[dependencies]

# Local copy in order to allow rapid development/debug
#edamame_foundation = { path = "../edamame_foundation", features = [ "packetcapture" ] }
edamame_foundation = { git = "https://github.com/edamametechnologies/edamame_foundation", branch = "main", features = [ "packetcapture" ] }
# Local copy in order to allow rapid development/debug
#flodbadd = { path = "../flodbadd", features = [ "packetcapture", "asyncpacketcapture" ] }
flodbadd = { git = "https://github.com/edamametechnologies/flodbadd", branch = "main", features = [ "packetcapture", "asyncpacketcapture" ] }

# Global statics w/ mutex
lazy_static = "1.5.0"

# Logging
tracing = "0.1.41"

# gRPC server/client
tonic = { version = "0.14.2", features = ["_tls-any"] }
prost = "0.14.1"
base64 = "0.22.1"

# CLI support
run_script = "0.11.0"

# Async
# For tokio debugging
tokio = { version = "1.47.1", features = ["full", "tracing"] }
console-subscriber = "0.4.1"

# Encrypted env (weak)
envcrypt = "0.5.0"

# Windows
[target.'cfg(any(target_os = "windows"))'.dependencies]
windows-service = "0.8.0"
cargo-wix = "0.3.9"

[build-dependencies]
# protobuf->Rust compiler
tonic-build = "0.14.2"

# Build metadata
vergen-gitcl = { version = "1.0.8", features = [ "build", "cargo", "rustc", "si" ] }

[target.'cfg(target_os = "windows")'.dependencies]
# For the winpcap installation support in Windows
# Local copy in order to allow rapid development/debug
#flodbadd = { path = "../flodbadd", features = [ "packetcapture", "asyncpacketcapture" ] }
flodbadd = { git = "https://github.com/edamametechnologies/flodbadd", branch = "main", features = [ "packetcapture", "asyncpacketcapture" ] }
